# tg-chat-moderator

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  system_prompt.md
docs/: reputation_plan.md
src/: __init__.py  cli.py  config.py  main.py
src/llm/: client.py  prompts.py
src/moderation/: __init__.py  actions.py  batch.py  cache.py  engine.py  newcomer.py  quota.py  reports.py  reputation.py  status.py
src/telegram/: client.py  gateway.py
